# RMQ_TransactionBundler

./: CMakeLists.txt  README.md  Raedme.md
common/include/: config.h  logger.h
common/src/: config.cpp  logger.cpp
config/: values.config
lib/rabbitmq_Libraries/: librabbitmq.pc  librabbitmq.so.0.16.0
messageclass/src/: UserMessages_Data.h
receiver/src/: receiver.cpp
sender/src/: sender.cpp
